--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       Exemplo: not(A * B) (equivalente a (AB) negado)</p>
     <p><strong>Exemplo completo:</strong><br>
       not(A) * not(B) + not(A) * B + not(A * B) (equivalente a A'B' + A'B + (AB)')</p>
+    <p><strong>False</strong> representa 0 e <strong>True</strong> representa 1</p>
     <p>Para dúvidas, me manda mensagem!</p>
   </div>
 </div>
