--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <h1>Tabela Verdade / Gabarito</h1>
 
       <label for="expressao">Digite sua expressão:</label>
-      <input type="text" id="expressao" placeholder="Ex: A and not(B)" />
+      <input type="text" id="expressao" placeholder="Ex: A * not(B)" />
 
       <label for="acao">O que deseja?</label>
       <select id="acao">
@@ -40,7 +40,7 @@
 
       <div id="gabaritoContainer" class="hidden">
         <label for="gabarito">Digite o gabarito:</label>
-        <input type="text" id="gabarito" placeholder="Ex: A and B" />
+        <input type="text" id="gabarito" placeholder="Ex: A * B" />
       </div>
 
       <button id="executar">Executar</button>
@@ -52,3 +52,4 @@
     <script src="script.js"></script>
   </body>
 </html>
+
